Refactor yo improve the reliability, maintainability problems