@@ -9,7 +9,6 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @Tag(name = "Generos Controller", description = "API de géneros")
@@ -18,8 +17,8 @@ public class GenerosController {
     @GetMapping("/api/generos")
     public List<String> getGeneros() {
         return Arrays.stream(Generos.values())  // Convierte el enum a un stream
-                     .map(Enum::name)  // Obtiene el nombre de cada valor
-                     .collect(Collectors.toList());  // Lo convierte en una lista
+                     .map(Enum::name)   // Obtiene el nombre de cada valor
+                     .toList();  // Lo convierte en una lista inmodificable
     }
 }
 
